fix add2XML_Request_Method_CustomTags metod ClientIpHelper (ignore ParamElement.length() > 3 )